@@ -26,6 +26,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
+import java.util.Optional;
 
 /**
  * Implementation of {@link UserNotificationService}.
@@ -333,7 +334,7 @@ public class UserNotificationServiceImpl implements UserNotificationService {
         dto.setBodyText(bundle.getString(dto.getNotificationType()));
         int size = notification.getActionUsers().size();
         if (size == 1) {
-            User actionUser = notification.getActionUsers().get(0);
+            User actionUser = notification.getActionUsers().getFirst();
             dto.setActionUserId(actionUser.getId());
             dto.setActionUserText(actionUser.getName());
         } else {
@@ -349,5 +350,54 @@ public class UserNotificationServiceImpl implements UserNotificationService {
      */
     private void sendNotification(Long userId) {
         messagingTemplate.convertAndSend(TOPIC + userId + NOTIFICATION, true);
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public void checkUnreadNotification(Long userId) {
+        long unreadNotifications = notificationRepo.countByTargetUserIdAndViewedIsFalse(userId);
+        if (unreadNotifications == 0) {
+            messagingTemplate.convertAndSend(TOPIC + userId + NOTIFICATION, false);
+        }
+    }
+
+    @Override
+    public void createOrUpdateHabitInviteNotification(UserVO targetUserVO, UserVO actionUserVO, Long habitId,
+        String habitName) {
+        Optional<Notification> existingNotification = notificationRepo
+            .findNotificationByTargetUserIdAndNotificationTypeAndTargetIdAndViewedIsFalse(targetUserVO.getId(),
+                NotificationType.HABIT_INVITE, habitId);
+
+        String customMessage;
+        if (existingNotification.isPresent()) {
+            Notification notification = existingNotification.get();
+            notification.getActionUsers().add(modelMapper.map(actionUserVO, User.class));
+
+            customMessage = createInvitationNotificationMessage(notification.getActionUsers(), habitName);
+
+            notification.setCustomMessage(customMessage);
+            notification.setTime(LocalDateTime.now());
+            notificationRepo.save(notification);
+        } else {
+            customMessage = String.format("%s invites you to add new habit %s.",
+                actionUserVO.getName(), habitName);
+
+            createNotification(targetUserVO, actionUserVO, NotificationType.HABIT_INVITE, habitId, customMessage);
+        }
+    }
+
+    private String createInvitationNotificationMessage(List<User> actionUsers, String habitName) {
+        int userCount = actionUsers.size();
+
+        return switch (userCount) {
+            case 1 -> String.format("%s invites you to add new habit %s.",
+                actionUsers.get(0).getName(), habitName);
+            case 2 -> String.format("%s and %s invite you to add new habit %s.",
+                actionUsers.get(0).getName(), actionUsers.get(1).getName(), habitName);
+            default -> String.format("%s, %s and other users invite you to add new habit %s.",
+                actionUsers.get(userCount - 2).getName(), actionUsers.get(userCount - 1).getName(), habitName);
+        };
     }
 }
