@@ -452,6 +452,18 @@ public class ModelUtils {
             .build();
     }
 
+    public static UserVO getAuthorVO() {
+        return UserVO.builder()
+            .id(2L)
+            .email(TestConst.EMAIL)
+            .name(TestConst.NAME)
+            .role(Role.ROLE_USER)
+            .lastActivityTime(localDateTime)
+            .verifyEmail(new VerifyEmailVO())
+            .dateOfRegistration(localDateTime)
+            .build();
+    }
+
     public static UserManagementVO getUserManagementVO() {
         return UserManagementVO.builder()
             .id(1L)
@@ -564,7 +576,7 @@ public class ModelUtils {
             List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
                 TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
         return new EcoNews(1L, zonedDateTime, TestConst.SITE, "source", "shortInfo", getUser(),
-            "title", "text",
+            "title", "text", false,
             List.of(EcoNewsComment.builder().status(CommentStatus.ORIGINAL).id(1L).text("test").build()),
             Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
     }
@@ -582,7 +594,7 @@ public class ModelUtils {
             List.of(TagTranslation.builder().name("Новини").language(Language.builder().code("ua").build()).build(),
                 TagTranslation.builder().name("News").language(Language.builder().code("en").build()).build()));
         return new EcoNews(1L, ZonedDateTime.now(), TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text",
+            "title", "text", false,
             List.of(getEcoNewsComment(CommentStatus.EDITED),
                 getEcoNewsComment(CommentStatus.ORIGINAL),
                 getEcoNewsComment(CommentStatus.DELETED),
@@ -592,7 +604,8 @@ public class ModelUtils {
 
     public static EcoNews getEcoNewsForFindDtoByIdAndLanguage() {
         return new EcoNews(1L, null, TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text", null, Collections.singletonList(getTag()), Collections.emptySet(), Collections.emptySet());
+            "title", "text", false, null, Collections.singletonList(getTag()), Collections.emptySet(),
+            Collections.emptySet());
     }
 
     public static EcoNewsVO getEcoNewsVO() {
@@ -1663,7 +1676,7 @@ public class ModelUtils {
 
     public static EcoNewsDto getEcoNewsDto() {
         return new EcoNewsDto(ZonedDateTime.now(), "imagePath", 1L, "title", "content", "text",
-            getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0);
+            getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0, false);
     }
 
     public static EcoNewsGenericDto getEcoNewsGenericDto() {
@@ -1676,7 +1689,8 @@ public class ModelUtils {
 
     public static EcoNewsDto getEcoNewsDtoForFindDtoByIdAndLanguage() {
         return new EcoNewsDto(null, TestConst.SITE, 1L, "title", "text", "shortInfo",
-            getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0);
+            getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0,
+            false);
     }
 
     public static UpdateEcoNewsDto getUpdateEcoNewsDto() {
@@ -2907,7 +2921,7 @@ public class ModelUtils {
             .user(getUser())
             .event(getEvent())
             .status(CommentStatus.ORIGINAL)
-            .comments(Arrays.asList(getSubEventComment()))
+            .comments(List.of(getSubEventComment()))
             .build();
     }
 
